// Minimal ONNX protobuf definitions for Mallorn
// Based on https://github.com/onnx/onnx/blob/main/onnx/onnx.proto
// Only includes structures needed for model patching

syntax = "proto3";

package onnx;

// Top-level model container
message ModelProto {
  int64 ir_version = 1;
  repeated OperatorSetIdProto opset_import = 8;
  string producer_name = 2;
  string producer_version = 3;
  string domain = 4;
  int64 model_version = 5;
  string doc_string = 6;
  GraphProto graph = 7;
  repeated StringStringEntryProto metadata_props = 14;
  repeated TrainingInfoProto training_info = 20;
  repeated FunctionProto functions = 25;
}

// Operator set version
message OperatorSetIdProto {
  string domain = 1;
  int64 version = 2;
}

// Key-value metadata
message StringStringEntryProto {
  string key = 1;
  string value = 2;
}

// Computation graph
message GraphProto {
  repeated NodeProto node = 1;
  string name = 2;
  repeated TensorProto initializer = 5;
  repeated SparseTensorProto sparse_initializer = 15;
  string doc_string = 10;
  repeated ValueInfoProto input = 11;
  repeated ValueInfoProto output = 12;
  repeated ValueInfoProto value_info = 13;
  repeated TensorAnnotation quantization_annotation = 14;
}

// Computation node
message NodeProto {
  repeated string input = 1;
  repeated string output = 2;
  string name = 3;
  string op_type = 4;
  string domain = 7;
  repeated AttributeProto attribute = 5;
  string doc_string = 6;
}

// Training information (optional)
message TrainingInfoProto {
  GraphProto initialization = 1;
  GraphProto algorithm = 2;
  repeated StringStringEntryProto initialization_binding = 3;
  repeated StringStringEntryProto update_binding = 4;
}

// Function definition
message FunctionProto {
  string name = 1;
  repeated string input = 4;
  repeated string output = 5;
  repeated string attribute = 6;
  repeated AttributeProto attribute_proto = 11;
  repeated NodeProto node = 7;
  string doc_string = 8;
  repeated OperatorSetIdProto opset_import = 9;
  string domain = 10;
}

// Node attribute
message AttributeProto {
  enum AttributeType {
    UNDEFINED = 0;
    FLOAT = 1;
    INT = 2;
    STRING = 3;
    TENSOR = 4;
    GRAPH = 5;
    SPARSE_TENSOR = 11;
    TYPE_PROTO = 13;
    FLOATS = 6;
    INTS = 7;
    STRINGS = 8;
    TENSORS = 9;
    GRAPHS = 10;
    SPARSE_TENSORS = 12;
    TYPE_PROTOS = 14;
  }
  string name = 1;
  string ref_attr_name = 21;
  string doc_string = 13;
  AttributeType type = 20;
  float f = 2;
  int64 i = 3;
  bytes s = 4;
  TensorProto t = 5;
  GraphProto g = 6;
  SparseTensorProto sparse_tensor = 22;
  TypeProto tp = 14;
  repeated float floats = 7;
  repeated int64 ints = 8;
  repeated bytes strings = 9;
  repeated TensorProto tensors = 10;
  repeated GraphProto graphs = 11;
  repeated SparseTensorProto sparse_tensors = 23;
  repeated TypeProto type_protos = 15;
}

// Tensor data (weights/initializers)
message TensorProto {
  enum DataType {
    UNDEFINED = 0;
    FLOAT = 1;
    UINT8 = 2;
    INT8 = 3;
    UINT16 = 4;
    INT16 = 5;
    INT32 = 6;
    INT64 = 7;
    STRING = 8;
    BOOL = 9;
    FLOAT16 = 10;
    DOUBLE = 11;
    UINT32 = 12;
    UINT64 = 13;
    COMPLEX64 = 14;
    COMPLEX128 = 15;
    BFLOAT16 = 16;
    FLOAT8E4M3FN = 17;
    FLOAT8E4M3FNUZ = 18;
    FLOAT8E5M2 = 19;
    FLOAT8E5M2FNUZ = 20;
    UINT4 = 21;
    INT4 = 22;
  }

  repeated int64 dims = 1;
  int32 data_type = 2;
  Segment segment = 3;

  // Float data
  repeated float float_data = 4 [packed = true];
  // Int32 data
  repeated int32 int32_data = 5 [packed = true];
  // String data
  repeated bytes string_data = 6;
  // Int64 data
  repeated int64 int64_data = 7 [packed = true];

  string name = 8;
  string doc_string = 12;

  // Raw byte data (preferred for efficiency)
  bytes raw_data = 9;

  // External data reference
  repeated StringStringEntryProto external_data = 13;

  enum DataLocation {
    DEFAULT = 0;
    EXTERNAL = 1;
  }
  DataLocation data_location = 14;

  // Double data
  repeated double double_data = 10 [packed = true];
  // Uint64 data
  repeated uint64 uint64_data = 11 [packed = true];

  message Segment {
    int64 begin = 1;
    int64 end = 2;
  }
}

// Sparse tensor
message SparseTensorProto {
  repeated int64 dims = 1;
  TensorProto indices = 2;
  TensorProto values = 3;
}

// Tensor annotation
message TensorAnnotation {
  string tensor_name = 1;
  repeated StringStringEntryProto quant_parameter_tensor_names = 2;
}

// Value info (input/output metadata)
message ValueInfoProto {
  string name = 1;
  TypeProto type = 2;
  string doc_string = 3;
}

// Type information
message TypeProto {
  message Tensor {
    int32 elem_type = 1;
    TensorShapeProto shape = 2;
  }
  message Sequence {
    TypeProto elem_type = 1;
  }
  message Map {
    int32 key_type = 1;
    TypeProto value_type = 2;
  }
  message Optional {
    TypeProto elem_type = 1;
  }
  message SparseTensor {
    int32 elem_type = 1;
    TensorShapeProto shape = 2;
  }

  oneof value {
    Tensor tensor_type = 1;
    Sequence sequence_type = 4;
    Map map_type = 5;
    Optional optional_type = 9;
    SparseTensor sparse_tensor_type = 8;
  }
  string denotation = 6;
}

// Tensor shape
message TensorShapeProto {
  message Dimension {
    oneof value {
      int64 dim_value = 1;
      string dim_param = 2;
    }
    string denotation = 3;
  }
  repeated Dimension dim = 1;
}
